--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <h1><a href="/" onclick="navigateTo('/'); return false;">KM to Miles Converter</a></h1>
             <nav>
                 <a href="/" onclick="navigateTo('/'); return false;">Home</a>
-                <a href="/p/sitemap.xml" onclick="navigateTo('/p/sitemap.xml'); return false;">Sitemap</a>
+                <a href="/sitemap.xml" onclick="navigateTo('/sitemap.xml'); return false;">Sitemap</a>
             </nav>
         </div>
         <div class="card calculator">
