--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn-icons-png.flaticon.com/512/189/189688.png" rel="icon" type="image/png"/>
+    <link href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStkdtDJtePXbabxgXUdOKT6kbNdK3XmPS0Got8e8K6VBrSMxFRjd4HEwF9&s=10" rel="icon" type="image/png"/>
     <title id="dynamicTitle">KM to Miles Converter</title>
     <meta content="Easily convert kilometers to miles with our fast, accurate online tool." id="metaDescription" name="description"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
