--- a/index.html
+++ b/index.html
@@ -8,9 +8,172 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
 
-    <!-- Styles remain unchanged -->
     <style>
-    /* ... (keeping all your existing styles) ... */
+    * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+    }
+    body {
+        font-family: 'Inter', sans-serif;
+        background: #f4f7fa;
+        color: #1f2a44;
+        line-height: 1.5;
+    }
+    .main-content {
+        padding: 40px;
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+    .header {
+        background: #ffffff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 30px;
+        text-align: center;
+    }
+    .header h1 {
+        font-size: 2em;
+        color: #1f2a44;
+    }
+    .header h1 a {
+        color: #14b8a6;
+        text-decoration: none;
+    }
+    .header nav {
+        margin-top: 10px;
+    }
+    .header nav a {
+        color: #14b8a6;
+        text-decoration: none;
+        margin: 0 10px;
+        font-weight: 600;
+    }
+    .header nav a:hover {
+        text-decoration: underline;
+    }
+    .card {
+        background: #ffffff;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 20px;
+    }
+    .calculator {
+        text-align: center;
+    }
+    .calculator input {
+        padding: 10px;
+        width: 100%;
+        max-width: 200px;
+        border: 1px solid #d1d5db;
+        border-radius: 5px;
+        font-size: 1em;
+        margin-bottom: 10px;
+    }
+    .calculator button {
+        padding: 10px 20px;
+        background: #14b8a6;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background 0.3s;
+    }
+    .calculator button:hover {
+        background: #0d9488;
+    }
+    .result {
+        margin-top: 15px;
+        font-size: 1.2em;
+        font-weight: 600;
+        color: #14b8a6;
+    }
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+        gap: 15px;
+    }
+    .grid-item {
+        background: #f9fafb;
+        padding: 10px;
+        text-align: center;
+        border-radius: 5px;
+        transition: transform 0.3s;
+    }
+    .grid-item:hover {
+        transform: scale(1.05);
+    }
+    .grid-item a {
+        color: #14b8a6;
+        text-decoration: none;
+        font-weight: 600;
+    }
+    .table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+    .table th, .table td {
+        padding: 10px;
+        border: 1px solid #e5e7eb;
+        text-align: center;
+    }
+    .table th {
+        background: #14b8a6;
+        color: #fff;
+    }
+    .formula, .steps, .explanation {
+        margin-top: 20px;
+        padding: 15px;
+        background: #f9fafb;
+        border-radius: 5px;
+    }
+    .formula h3, .steps h3, .explanation h3 {
+        color: #14b8a6;
+        margin-bottom: 10px;
+    }
+    .sitemap pre {
+        background: #f9fafb;
+        padding: 15px;
+        border-radius: 5px;
+        font-size: 0.9em;
+        white-space: pre-wrap;
+        max-height: 400px;
+        overflow-y: auto;
+    }
+    .sitemap button {
+        margin-top: 15px;
+        padding: 10px 20px;
+        background: #14b8a6;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .sitemap button:hover {
+        background: #0d9488;
+    }
+    .footer {
+        text-align: center;
+        padding: 20px;
+        background: #ffffff;
+        box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.05);
+        margin-top: 40px;
+    }
+    @media (max-width: 768px) {
+        .main-content {
+            padding: 20px;
+        }
+        .header h1 {
+            font-size: 1.5em;
+        }
+        .header nav a {
+            display: block;
+            margin: 5px 0;
+        }
+    }
     </style>
 </head>
 <body>
@@ -118,7 +281,7 @@
         
         sitemap += '  <url>\n';
         sitemap += `    <loc>${baseUrl}/?page=sitemap</loc>\n`;
-        sitemap += `    <lastmod>${currentDate}</lastmod>\n`;
+        sitemap += `    <lastmod>${currentDate}</lastmod>\n';
         sitemap += '    <changefreq>monthly</changefreq>\n';
         sitemap += '    <priority>0.5</priority>\n';
         sitemap += '  </url>\n';
@@ -127,7 +290,7 @@
             const url = `${baseUrl}/?km=${i}`;
             sitemap += '  <url>\n';
             sitemap += `    <loc>${url}</loc>\n`;
-            sitemap += `    <lastmod>${currentDate}</lastmod>\n`;
+            sitemap += `    <lastmod>${currentDate}</lastmod>\n';
             sitemap += '    <changefreq>monthly</changefreq>\n';
             sitemap += '    <priority>0.8</priority>\n';
             sitemap += '  </url>\n';
